feat(game, system): implement tile selection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,10 @@ set(REALM_FORTRESS_SOURCES
         src/game/system/coordinate.h
         src/game/system/map.cpp
         src/game/system/map.h
+        src/game/system/picker.cpp
+        src/game/system/picker.h
+        src/game/system/selection.cpp
+        src/game/system/selection.h
         src/game/system/tile.cpp
         src/game/system/tile.h
         src/game/system/utils.h
